# coreader-airflow

./: .gitignore  README.md  makefile
dags/: .gitignore  Dockerfile  makefile
dags/src/: dag_virtualenv.py  feed_service.py  pyproject.toml  test.py
deployment/: airflow-values.yaml  git-credentials.yaml  jupyter.yaml  mongo.yaml  namespace.yaml  redis.yaml  test.yaml
docker/: docker-compose.yaml
notebooks/: feed_scrapping.ipynb  readme.md
scripts/: install.sh  provision.sh
